--- a/engine/src/.gitignore
+++ b/engine/src/.gitignore
@@ -1,10 +1,4 @@
-Makefile linguist-documentation
-makefile linguist-documentation
-*.mk linguist-documentation
-
-tests/**/*.json linguist-vendored
-data/*.csv linguist-vendored
-
-docs/**/* linguist-documentation
-
-scripts/*.sh linguist-detectable=false
+/target/
+**/*.d
+**/*.rmeta
+**/*.rs.bk
